most_common_n now works with series

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -526,33 +526,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "really\n",
-      "very cool\n",
-      "\n",
-      "everyone\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_phrase = [\"i am really\", \"very cool\", \"hi\", \"everyone\"]\n",
-    "for j in range(0, len(test_phrase)):\n",
-    "    partial_phrase = test_phrase[j]\n",
-    "    split = partial_phrase.split(\" \")\n",
-    "\n",
-    "    #recombine it, filtering out tokens of less than 3 characters, but keeping bigrams\n",
-    "    recombined = \" \".join([p for p in split if len(p) > 2])\n",
-    "    print(recombined)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 108,
    "metadata": {},
    "outputs": [],
@@ -560,26 +533,6 @@
     "#instantiate a new dataset\n",
     "#run the preprocessing with lowercasing, removing newlines, stemming, and tokenisation using the nltk regex\n",
     "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\"], retList=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18651"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(d.pp_df)"
    ]
   },
   {
@@ -643,68 +596,6 @@
    "outputs": [],
    "source": [
     "process_dataset(d2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0       save 70 life insurance spend life quote saving...\n",
-       "2.0       1 fight risk cancer http www adclick ws p cfm ...\n",
-       "3.0       1 fight risk cancer http www adclick ws p cfm ...\n",
-       "4.0       adult club offers free membership instant acce...\n",
-       "5.0       thought might like 1 slim guaranteed lose 10 1...\n",
-       "                                ...                        \n",
-       "2601.0    subject computationally intensive methods quan...\n",
-       "2602.0    subject books survey american linguistics publ...\n",
-       "2603.0    subject wecol 98 western conference linguistic...\n",
-       "2604.0    subject euralex 98 revised programme euralex 9...\n",
-       "2605.0    body label 0 subject great part time summer jo...\n",
-       "Name: ppBody, Length: 18651, dtype: object"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d2.pp_df['ppBody']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "_                                                         52195\n",
-       "â                                                          9823\n",
-       "½ï                                                         7960\n",
-       "subject                                                    6630\n",
-       "com                                                        6140\n",
-       "                                                          ...  \n",
-       "stoneware                                                     1\n",
-       "gmjndydg                                                      1\n",
-       "c2zirzux0m1s75z5vc6iriykkityewt5ro3zsskpsyyu4nvgqcwnxo        1\n",
-       "haunch                                                        1\n",
-       "uarantee                                                      1\n",
-       "Name: ppBody, Length: 85634, dtype: int64"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d2.pos_word_counter"
    ]
   },
   {
@@ -861,6 +752,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "subject    6630\n",
+       "com        6141\n",
+       "email      5354\n",
+       "http       4930\n",
+       "free       4511\n",
+       "000        4127\n",
+       "mail       3959\n",
+       "please     3949\n",
+       "money      3929\n",
+       "get        3915\n",
+       "Name: ppBody, dtype: int64"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d3.pos_word_counter.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable int object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 40\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y222sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m [(word, count) \u001b[39mfor\u001b[39;00m (word, count) \u001b[39min\u001b[39;00m d3\u001b[39m.\u001b[39mpos_word_counter\u001b[39m.\u001b[39mhead(\u001b[39m10\u001b[39m)]\n",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 40\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y222sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m [(word, count) \u001b[39mfor\u001b[39;00m (word, count) \u001b[39min\u001b[39;00m d3\u001b[39m.\u001b[39mpos_word_counter\u001b[39m.\u001b[39mhead(\u001b[39m10\u001b[39m)]\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
+     ]
+    }
+   ],
+   "source": [
+    "[(word, count) for (word, count) in d3.pos_word_counter.head(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6630, 'subject'),\n",
+       " (6141, 'com'),\n",
+       " (5354, 'email'),\n",
+       " (4930, 'http'),\n",
+       " (4511, 'free'),\n",
+       " (4127, '000'),\n",
+       " (3959, 'mail'),\n",
+       " (3949, 'please'),\n",
+       " (3929, 'money'),\n",
+       " (3915, 'get')]"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "head = d3.pos_word_counter.head(10)\n",
+    "# list(head.itertuples(index=False))\n",
+    "list(zip(head, head.index))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -874,14 +848,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_most_common_n(counter, n, name):\n",
+    "def print_most_common_n(counter_df, n, name):\n",
     "    print(f\"{n} most common tokens in {name}:\\n\")\n",
     "\n",
-    "    most_common = counter.most_common(n)\n",
+    "    head = counter_df.head(n)\n",
+    "    most_common = list(zip(head.index, head))\n",
     "\n",
     "    if n < 6:\n",
     "        output = \", \".join([f\"\\\"{word}\\\" ({count})\" for (word, count) in most_common])\n",
@@ -893,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -950,124 +925,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 most common tokens in dfSpam (stopwords removed) - non-Spam emails:\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'most_common'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 38\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m print_most_common_n(d3\u001b[39m.\u001b[39;49mneg_word_counter, \u001b[39m20\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mdfSpam (stopwords removed) - non-Spam emails\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 38\u001b[0m in \u001b[0;36mprint_most_common_n\u001b[1;34m(counter, n, name)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprint_most_common_n\u001b[39m(counter, n, name):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mn\u001b[39m}\u001b[39;00m\u001b[39m most common tokens in \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     most_common \u001b[39m=\u001b[39m counter\u001b[39m.\u001b[39;49mmost_common(n)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m<\u001b[39m \u001b[39m6\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         output \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin([\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\\"\u001b[39;00m\u001b[39m{\u001b[39;00mword\u001b[39m}\u001b[39;00m\u001b[39m\\\"\u001b[39;00m\u001b[39m (\u001b[39m\u001b[39m{\u001b[39;00mcount\u001b[39m}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mfor\u001b[39;00m (word, count) \u001b[39min\u001b[39;00m most_common])\n",
-      "File \u001b[1;32mc:\\Users\\theco\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\generic.py:5902\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5895\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   5896\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[0;32m   5897\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[0;32m   5898\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[0;32m   5899\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   5900\u001b[0m ):\n\u001b[0;32m   5901\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> 5902\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'most_common'"
+      "20 most common tokens in dfSpam (stopwords and short tokens removed) - non-Spam emails:\n",
+      "\n",
+      "language (15162)\n",
+      "university (15135)\n",
+      "subject (14113)\n",
+      "http (12953)\n",
+      "enron (12349)\n",
+      "com (11705)\n",
+      "one (9584)\n",
+      "information (9021)\n",
+      "mail (8764)\n",
+      "www (8569)\n",
+      "would (8195)\n",
+      "new (8067)\n",
+      "please (8060)\n",
+      "linguistics (7967)\n",
+      "ect (7466)\n",
+      "conference (7023)\n",
+      "also (6845)\n",
+      "papers (6170)\n",
+      "may (6157)\n",
+      "english (5787)\n"
      ]
     }
    ],
    "source": [
-    "print_most_common_n(d3.neg_word_counter, 20, \"dfSpam (stopwords removed) - non-Spam emails\")"
+    "print_most_common_n(d3.neg_word_counter, 20, \"dfSpam (stopwords and short tokens removed) - non-Spam emails\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "e    2122314\n",
-       "i    1415227\n",
-       "a    1406244\n",
-       "n    1334537\n",
-       "s    1325645\n",
-       "t    1281843\n",
-       "r    1223865\n",
-       "o    1143616\n",
-       "l     894582\n",
-       "c     787918\n",
-       "d     598144\n",
-       "u     587289\n",
-       "p     539334\n",
-       "m     536085\n",
-       "g     473977\n",
-       "h     377746\n",
-       "y     277204\n",
-       "f     249569\n",
-       "b     245626\n",
-       "w     212859\n",
-       "v     212703\n",
-       "k     174667\n",
-       "0      86195\n",
-       "x      72221\n",
-       "1      66542\n",
-       "j      60226\n",
-       "9      55213\n",
-       "2      47821\n",
-       "_      45904\n",
-       "q      32064\n",
-       "5      29975\n",
-       "8      29480\n",
-       "z      29289\n",
-       "3      29017\n",
-       "4      24299\n",
-       "7      23104\n",
-       "6      22820\n",
-       "â        708\n",
-       "ã        225\n",
-       "ï         78\n",
-       "½         58\n",
-       "¼         44\n",
-       "œ         42\n",
-       "º          9\n",
-       "²          8\n",
-       "³          6\n",
-       "ÿ          5\n",
-       "ª          3\n",
-       "¹          1\n",
-       "š          1\n",
-       "ˆ          1\n",
-       "Name: ppBody, dtype: int64"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 most common tokens in dfSpam (stopwords and short tokens removed) - Spam emails:\n",
+      "\n",
+      "subject (6630)\n",
+      "com (6141)\n",
+      "email (5354)\n",
+      "http (4930)\n",
+      "free (4511)\n",
+      "000 (4127)\n",
+      "mail (3959)\n",
+      "please (3949)\n",
+      "money (3929)\n",
+      "get (3915)\n",
+      "company (3898)\n",
+      "information (3878)\n",
+      "one (3670)\n",
+      "business (3606)\n",
+      "time (3371)\n",
+      "report (3130)\n",
+      "click (3111)\n",
+      "www (3088)\n",
+      "new (3087)\n",
+      "order (2751)\n",
+      "make (2749)\n",
+      "may (2533)\n",
+      "people (2514)\n",
+      "address (2468)\n",
+      "list (2446)\n",
+      "send (2390)\n",
+      "name (2274)\n",
+      "within (2089)\n",
+      "like (2087)\n",
+      "internet (2077)\n",
+      "net (2037)\n",
+      "statements (2004)\n",
+      "program (1992)\n",
+      "price (1943)\n",
+      "receive (1905)\n",
+      "100 (1902)\n",
+      "software (1900)\n",
+      "want (1893)\n",
+      "would (1850)\n",
+      "best (1850)\n",
+      "home (1839)\n",
+      "need (1779)\n",
+      "also (1737)\n",
+      "use (1727)\n",
+      "site (1666)\n",
+      "message (1665)\n",
+      "online (1611)\n",
+      "million (1563)\n",
+      "see (1558)\n",
+      "day (1557)\n"
+     ]
     }
    ],
    "source": [
-    "d3.neg_word_counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(d3.neg_word_counter)"
+    "print_most_common_n(d3.pos_word_counter, 50, \"dfSpam (stopwords and short tokens removed) - Spam emails\")"
    ]
   },
   {
