Rotten tomatoes training set, WIP loading new data

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -12,10 +12,13 @@
     "Roadmap:\n",
     "- Preprocessing\n",
     "    - Sentiment Analysis\n",
+    "    - Extract features based on persuasive features of speech / common phishing tropes\n",
+    "    - Steal some feature ideas from webpage classification and apply these\n",
     "- Classification\n",
     "    - Logistic Regression on emails\n",
-    "    - word2vec model\n",
-    "    - Transformer-based model\n",
+    "    - word2vec/GLoVE word representation -> logistic regression\n",
+    "    - Transformer-based model (BERT)\n",
+    "    - Transfer learning\n",
     "- Generation\n",
     "    - With GANs\n",
     "    - With T5\n",
@@ -278,18 +281,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Dataset:\n",
-    "    def __init__(self, df, preprocessing=[\"lower\"], feature_selection=[\"alltokens\"], retList=False):\n",
+    "    def __init__(self, df, preprocessing=[\"lower\"], feature_selection=[\"alltokens\"], retList=False, bodyColumn='Body'):\n",
     "        \n",
     "        #read preprocessing and feature_selection configuration\n",
     "        self.preprocessing = preprocessing\n",
     "        self.feature_selection = feature_selection\n",
     "        self.data = df\n",
     "        self.retList = retList\n",
+    "        self.bodyColumn = bodyColumn\n",
     "\n",
     "        # === define various processors and regexes for various preprocessing/feature selection methods ===\n",
     "\n",
@@ -516,10 +520,10 @@
     "    def process_phrases(self):\n",
     "        \"\"\"extract bodies\"\"\"\n",
     "\n",
-    "        self.bodies = self.data['Body']\n",
+    "        self.bodies = self.data[self.bodyColumn]\n",
     "        \n",
     "        #apply preprocessing function to all phrases using list comprehension\n",
-    "        self.preprocessed_phrases = [self.preprocess_phrase(phrase) for phrase in self.data['Body']]\n",
+    "        self.preprocessed_phrases = [self.preprocess_phrase(phrase) for phrase in self.bodies]\n",
     "        self.features = [self.extract_features_from_phrase(phrase) for phrase in self.preprocessed_phrases]\n",
     "\n",
     "        data = {'id': self.data['id'], 'ppBody': self.features, 'label': self.data['Label']}\n",
@@ -941,6 +945,192 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sentiment Analysis"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a Naive-Bayes based Sentiment-Analysis Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PhraseId</th>\n",
+       "      <th>SentenceId</th>\n",
+       "      <th>Phrase</th>\n",
+       "      <th>Sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A series of escapades demonstrating the adage ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A series of escapades demonstrating the adage ...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A series</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>series</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PhraseId  SentenceId                                             Phrase  \\\n",
+       "0         1           1  A series of escapades demonstrating the adage ...   \n",
+       "1         2           1  A series of escapades demonstrating the adage ...   \n",
+       "2         3           1                                           A series   \n",
+       "3         4           1                                                  A   \n",
+       "4         5           1                                             series   \n",
+       "\n",
+       "   Sentiment  \n",
+       "0          1  \n",
+       "1          2  \n",
+       "2          2  \n",
+       "3          2  \n",
+       "4          2  "
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sent_raw = pd.read_csv(\"./kaggle-datasets/sentiment-analysis-on-movie-reviews/train.tsv\", sep='\\t')\n",
+    "\n",
+    "#TODO: worth re-mapping the data to 3 classes?\n",
+    "\n",
+    "sent_raw.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\theco\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3803\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3802\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3803\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3804\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mc:\\Users\\theco\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\_libs\\index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\theco\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\_libs\\index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'id'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 46\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y243sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sent_dataset \u001b[39m=\u001b[39m Dataset(sent_raw, preprocessing\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mlower\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mpunc\u001b[39;49m\u001b[39m\"\u001b[39;49m], feature_selection\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39malltokens\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mcustom_tokenize\u001b[39;49m\u001b[39m\"\u001b[39;49m], bodyColumn\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mPhrase\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 46\u001b[0m in \u001b[0;36mDataset.__init__\u001b[1;34m(self, df, preprocessing, feature_selection, retList, bodyColumn)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y243sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mNLTK_ENGLISH_STOP \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(NLTK_STOP\u001b[39m.\u001b[39mwords(\u001b[39m'\u001b[39m\u001b[39menglish\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y243sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m \u001b[39m# === apply preprocessing and feature selection ===\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y243sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprocess_phrases()\n",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 46\u001b[0m in \u001b[0;36mDataset.process_phrases\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y243sZmlsZQ%3D%3D?line=238'>239</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpreprocessed_phrases \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpreprocess_phrase(phrase) \u001b[39mfor\u001b[39;00m phrase \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbodies]\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y243sZmlsZQ%3D%3D?line=239'>240</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfeatures \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mextract_features_from_phrase(phrase) \u001b[39mfor\u001b[39;00m phrase \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpreprocessed_phrases]\n\u001b[1;32m--> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y243sZmlsZQ%3D%3D?line=241'>242</a>\u001b[0m data \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mid\u001b[39m\u001b[39m'\u001b[39m: \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata[\u001b[39m'\u001b[39;49m\u001b[39mid\u001b[39;49m\u001b[39m'\u001b[39;49m], \u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m: \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfeatures, \u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m: \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata[\u001b[39m'\u001b[39m\u001b[39mLabel\u001b[39m\u001b[39m'\u001b[39m]}\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y243sZmlsZQ%3D%3D?line=242'>243</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpp_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(data\u001b[39m=\u001b[39mdata)\n",
+      "File \u001b[1;32mc:\\Users\\theco\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\frame.py:3805\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3803\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3804\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3805\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3806\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3807\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\theco\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3803\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3804\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3806\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3807\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3808\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3809\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3810\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'id'"
+     ]
+    }
+   ],
+   "source": [
+    "sent_dataset = Dataset(sent_raw, preprocessing=[\"lower\",\"punc\"], feature_selection=[\"alltokens\",\"custom_tokenize\"], bodyColumn='Phrase')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "\n",
+    "Here we use a standard labelled dataset to train the NB model. We use the whole dataset for training and validation, and do not set aside a testing dataset, as we will test against the email datasets\n",
+    "\n",
+    "Once we have defined a custom Sentiment measure, we can re-implement Naive Bayes with these 'custom' classes (for urgency, authority, scarcity, etc). We may use a naive dictionary-based system for labelling, and train based on this. However, we need to be careful with this approach as dictionary-based approaches struggle with things like sarcasm, negation, etc.\n",
+    "\n",
+    "More 'objective' features, such as a count of the number of imperative words, may be a better metric here (saying \"click here\" in an email is unlikely to be sarcastic, and \"do not click this link\" is still potentially fishy - unless it is part of an advisory telling employees not to interact with phishing emails...).\n",
+    "\n",
+    "Or, we may have to manually label a small training dataset."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Persuasion\n",
+    "\n",
+    "One of our metrics will be focused around detecting persuasive language. This paper is useful for this: https://convokit.cornell.edu/documentation/persuasionforgood.html"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Email Classification"
    ]
   },
@@ -1090,6 +1280,16 @@
     "## New Feature Extraction\n",
     "\n",
     "Can we apply the features used in this dataset to Email-Spam-Dataset?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transfer Learning\n",
+    "\n",
+    "Use a pretrained word representation and replace the classification layer, then fine-tune the model."
    ]
   },
   {
