WIP Dataset class from few weeks ago

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -294,14 +294,13 @@
    "outputs": [],
    "source": [
     "class Dataset:\n",
-    "    def __init__(self, df, preprocessing=[\"lower\"], feature_selection=[\"alltokens\"], retList=False, bodyColumn='Body'):\n",
+    "    def __init__(self, df, preprocessing=[\"lower\"], feature_selection=[\"alltokens\"], retList=False):\n",
     "        \n",
     "        #read preprocessing and feature_selection configuration\n",
     "        self.preprocessing = preprocessing\n",
     "        self.feature_selection = feature_selection\n",
     "        self.data = df\n",
     "        self.retList = retList\n",
-    "        self.bodyColumn = bodyColumn\n",
     "\n",
     "        # === define various processors and regexes for various preprocessing/feature selection methods ===\n",
     "\n",
@@ -536,6 +535,17 @@
     "\n",
     "        data = {'id': self.data['id'], 'ppBody': self.features, 'label': self.data['Label']}\n",
     "        self.pp_df = pd.DataFrame(data=data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EmailDataset(Dataset):\n",
+    "    def __init__(self, df, preprocessing, feature_selection, retList):\n",
+    "        super().__init__(df, preprocessing, feature_selection, retList)"
    ]
   },
   {
