--- a/classif.ipynb
+++ b/classif.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "5.0  4.0  I thought you might like these:\\n1) Slim Down ...     1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +281,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import feature_extraction, model_selection, naive_bayes, pipeline, manifold, preprocessing"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -290,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,8 +535,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Subclass for emails"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +567,33 @@
     "        self.features = [self.extract_features_from_phrase(phrase) for phrase in self.preprocessed_phrases]\n",
     "\n",
     "        data = {'id': self.data['id'], 'ppBody': self.features, 'label': self.data['Label']}\n",
-    "        self.pp_df = pd.DataFrame(data=data)"
+    "        self.pp_df = pd.DataFrame(data=data)\n",
+    "\n",
+    "    def process_dataset(self):\n",
+    "        \"\"\"applies post-processing to the dataframe rows\"\"\"\n",
+    "\n",
+    "        #load the text body\n",
+    "        df = self.pp_df\n",
+    "\n",
+    "        #find the negative and positive classes\n",
+    "        positive = df[df['label'] == \"1\"]\n",
+    "        negative = df[df['label'] == \"0\"]\n",
+    "\n",
+    "        l_positive = len(positive)\n",
+    "        l_negative = len(negative)\n",
+    "\n",
+    "        #which class is bigger?\n",
+    "        min_len = min(l_positive, l_negative)\n",
+    "\n",
+    "        #take a random sample of the smaller class to remove class imbalance\n",
+    "        if l_positive > l_negative:\n",
+    "            positive = positive.sample(min_len, random_state=myseed)\n",
+    "        elif l_negative > l_positive:\n",
+    "            negative = negative.sample(min_len, random_state=myseed)\n",
+    "\n",
+    "        #create counters from the text bodies\n",
+    "        self.pos_word_counter = positive['ppBody'].str.split().explode().value_counts()\n",
+    "        self.neg_word_counter = negative['ppBody'].str.split().explode().value_counts()"
    ]
   },
   {
@@ -558,60 +601,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instantiate our dataset `d` with basic feature selection + tokenisation"
+    "Subclass for sentiment analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#instantiate a new dataset\n",
-    "#run the preprocessing with lowercasing, removing newlines, stemming, and tokenisation using the nltk regex\n",
-    "d = EmailDataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\"], retList=False)"
+    "class SentimentDataset(Dataset):\n",
+    "    def __init__(self, df, preprocessing, feature_selection, retList, bodyColumn='Phrase'):\n",
+    "        super().__init__(df, preprocessing, feature_selection, retList)\n",
+    "\n",
+    "        self.bodyColumn = bodyColumn\n",
+    "\n",
+    "        # === apply preprocessing and feature selection ===\n",
+    "\n",
+    "        self.process_phrases()\n",
+    "\n",
+    "    def process_phrases(self):\n",
+    "        # return super().process_phrases()\n",
+    "        #TODO: implement\n",
+    "        pass"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Word Representation Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_dataset(dataset):\n",
-    "    \"\"\"applies post-processing to the dataframe rows\"\"\"\n",
+    "class WordRep:\n",
+    "    def __init__(self, corpus):\n",
+    "        self.corpus = corpus\n",
     "\n",
-    "    #load the text body\n",
-    "    df = dataset.pp_df\n",
-    "\n",
-    "    #find the negative and positive classes\n",
-    "    positive = df[df['label'] == \"1\"]\n",
-    "    negative = df[df['label'] == \"0\"]\n",
-    "\n",
-    "    l_positive = len(positive)\n",
-    "    l_negative = len(negative)\n",
-    "\n",
-    "    #which class is bigger?\n",
-    "    min_len = min(l_positive, l_negative)\n",
-    "\n",
-    "    #take a random sample of the smaller class to remove class imbalance\n",
-    "    if l_positive > l_negative:\n",
-    "        positive = positive.sample(min_len, random_state=myseed)\n",
-    "    elif l_negative > l_positive:\n",
-    "        negative = negative.sample(min_len, random_state=myseed)\n",
-    "\n",
-    "    #create counters from the text bodies\n",
-    "    dataset.pos_word_counter = positive['ppBody'].str.split().explode().value_counts()\n",
-    "    dataset.neg_word_counter = negative['ppBody'].str.split().explode().value_counts()"
+    "    def tfidf(self, max_features=10000, ngram_range=(1,2)):\n",
+    "        vectorizer = feature_extraction.text.TfidfVectorizer(max_features=max_features, ngram_range=ngram_range)\n",
+    "        vectorizer.fit(self.corpus)\n",
+    "        self.representation = vectorizer.transform(self.corpus)\n",
+    "        self.vocabulary = vectorizer.vocabulary_"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classifier Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d2 = EmailDataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\", \"nltk_stoplist\"], retList=False)"
+    "class Classifier:\n",
+    "    def __init__(self, dataset, word_rep_choice, bodyColumn='Body'):\n",
+    "        self.dataset = dataset\n",
+    "        self.corpus = dataset.data[bodyColumn]\n",
+    "\n",
+    "        self.word_rep_choice = word_rep_choice\n",
+    "        self.word_rep = WordRep(self.corpus)\n",
+    "        \n",
+    "        if self.word_rep_choice == 'tfidf':\n",
+    "            self.word_rep.tfidf()\n",
+    "\n",
+    "    def train(dataset):\n",
+    "        pass"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Utility Methods for Saving Models etc"
    ]
   },
   {
@@ -624,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,8 +762,44 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Instantiate some datasets "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instantiate our dataset `d` with basic feature selection + tokenisation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#instantiate a new dataset\n",
+    "#run the preprocessing with lowercasing, removing newlines, stemming, and tokenisation using the nltk regex\n",
+    "d = EmailDataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\"], retList=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d2 = EmailDataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\", \"nltk_stoplist\"], retList=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,29 +808,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_dataset(d3)"
+    "d.process_dataset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_dataset(d)"
+    "d2.process_dataset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_dataset(d2)"
+    "d3.process_dataset()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Instantiate Word Representations for each Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier_1 = Classifier(d, 'tfidf')"
    ]
   },
   {
